--- a/src/scss/components/_popup-forms.scss
+++ b/src/scss/components/_popup-forms.scss
@@ -554,4 +554,21 @@
   &__sheet-tab-editor {
     height: 100%;
   }
+
+  &__footer {
+    margin-top: 10px;
+    display: flex;
+    width: 100%;
+    flex: 0 0 auto; /* Prevent footer from scrolling */
+    justify-content: flex-end;
+    
+    /* Make the submit button take appropriate width */
+    .popup-form__button--primary {
+      min-width: 120px;
+      justify-content: center;
+      padding: 8px;
+      font-weight: bold;
+      text-align: center;
+    }
+  }
 }
