--- a/templates/macros/select-ability-roll.hbs
+++ b/templates/macros/select-ability-roll.hbs
@@ -1,4 +1,5 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
+  <div class="base-form__content">
     <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.SelectAbilityRoll"}}:</div>
     <div class="base-form__group">
         <select class="base-form__select" autofocus name="attribute-choice">
@@ -7,8 +8,10 @@
             {{/each}}
         </select>
     </div>
-    <div class="base-form__group base-form__group--right">
-      <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Roll"}}</button>
-      <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
-    </div>
+  </div>
+  
+  <footer class="base-form__footer">
+    <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Roll"}}</button>
+    <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
+  </footer>
 </div>
